# embedded-timer

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  interface.md  openocd.gdb
.cargo/: config
src/: button.rs  lib.rs  main.rs  systick.rs
