[package]
authors = ["Robin Gearn <robin@wescottdesign.com>", "James Wescott <james@wescottdesign.com>"]
edition = "2018"
readme = "README.md"
name = "timer"
version = "0.1.0"

[dependencies]
cortex-m = "^0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.2"
# panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"

[dependencies.stm32f30x-hal]
version = "0.2.0"

[patch.crates-io]
stm32f30x-hal = { path = "./stm32f30x-hal" }


[dependencies.stm32f3]
features = ["stm32f303", "rt"]
version = "0.8.0"

# this lets you use `cargo fix`!
[[bin]]
name = "timer"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
